# llm_cost_exporter

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: cd.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  alerts.yaml  deployment.yaml  hpa.yaml  secrets.yaml  service-account.yaml  service-monitor.yaml  service.yaml
examples/compose-stack/: README.md  compose.yaml  dashboards.yml  datasource.yaml
examples/k8s-cost-alerting/: README.md  cost-alert-rule.yaml  kustomization.yaml
src/: main.rs  tracker.rs
src/providers/: openai.rs
