[dependencies]
prometheus = { version = "0.13", features = ["process"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "0.55"
aws-sdk-bedrockruntime = "0.55"
async-trait = "0.1"
thiserror = "1.0"