[package]
name = "llm_cost_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
prometheus = { version = "0.13", features = ["process"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = { version = "1.6.1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.82.0"
aws-sdk-sts = "1.65.0"
aws-credential-types = "1.2.2"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
warp = "0.3.7"
yaml-rust = "0.4.5"

[dev-dependencies]
mockito = "1.1"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }